examples/test/testpolicy4878.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4878
  namespace: namespace306
spec:
  podSelector:
    matchLabels:
      key34: value45
      key37: value10
      key24: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value29
          key39: value41
      podSelector:
        matchLabels:
          key21: value28
          key34: value39
